--- a/templates/base.html
+++ b/templates/base.html
@@ -37,10 +37,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="/">demo1</a>
-                </li>
                 {% if request.user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" >{{ request.user }}</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'logout' %}">Logout</a>
                     </li>
