[CREATED] Search Page Implementation  - Search form Creation  - search model create  - search view      - take the input data from form submit      - split the data      - strip the data for removing space      - stored the data in reverse order      - save the data in database
resolves: #2

--- a/templates/base.html
+++ b/templates/base.html
@@ -39,6 +39,10 @@
             <ul class="navbar-nav ml-auto">
                 {% if request.user.is_authenticated %}
                     <li class="nav-item">
+                        <a class="nav-link" href="{% url 'search' %}">Search</a>
+                    </li>
+
+                    <li class="nav-item">
                         <a class="nav-link" >{{ request.user }}</a>
                     </li>
                     <li class="nav-item">
